--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,6 @@
 <resources>
     <string name="app_name">FireRunning</string>
-    <string name="dummy_email">15596630691@163.com</string>
-    <string name="dummy_password">aiyuan123456</string>
-    <string name="Sign_in">登陆</string>
-    <string name="Success">Success</string>
-    <string name="Loading">Loading</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_main">主页面</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -13,20 +8,57 @@
     <string name="action_settings">Settings</string>
     <string name="dialog_title">You must do!</string>
     <string name="dialog_message">Import map form server</string>
-    <string name="title_activity_maps">Map</string>
     <string name="push">消息推送</string>
-    <string name="title_activity_message_push">MessagePushActivity</string>
     <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
     <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
-    <string name="error_style_empty">style不能为空</string>
     <string name="error_alias_empty">alias不能为空</string>
     <string name="error_tag_empty">tag不能为空</string>
     <string name="error_tag_gs_empty">格式不对</string>
-    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
-    <string name="logining">程序在后台执行, 请查看日志！</string>
     <string name="setting_su">设置成功</string>
     <string name="title_PushActivity">推送界面</string>
     <string name="test_Activity">测试</string>
     <string name="set_Activity">推送设置</string>
+
+    <string name="text_login">登录</string>
+    <string name="text_registered">新用户注册</string>
+    <string name="text_find_password">忘记密码?</string>
+////    <string name="text_change_password">修改密码</string>
+
+    <string name="text_phone">注册时的手机号码</string>
+    <string name="text_password_again">再次输入密码</string>
+    <string name="text_keep_password">记住密码</string>
+    <string name="et_phone_num">手机号</string>
+    <string name="text_name">姓名</string>
+    <string name="text_age">年龄</string>
+    <string name="text_desc">个人简介</string>
+    <string name="text_boy">boy</string>
+    <string name="text_girl">girl</string>
+    <string name="text_password">密码</string>
+
+
+    <string name="text_tost_empty">输入框不能为空</string>
+    <string name="text_nothing">这个人很懒，什么都没有留下！</string>
+    <string name="text_login_success">登录成功</string>
+    <string name="text_login_failure">登录失败</string>
+    <string name="text_editor_success">修改成功</string>
+    <string name="text_editor_failure">修改失败</string>
+    <string name="avatar_editor_success">头像更新成功</string>
+    <string name="avatar_editor_failure">头像更新失败</string>
+    <string name="text_registered_successful">注册成功</string>
+    <string name="text_registered_failure">注册失败：</string>
+
+
+    <string name="text_two_input_not_consistent">两次输入的密码不一致</string>
+    <string name="text_now_login">正在登陆...</string>
+
+//    <string name="text_phone_find">找回密码</string>
+    <string name="text_setting_password">重置密码</string>
+    <string name="text_reset_sms_code">重新发送验证码</string>
+    <string name="text_sms_code_reset_successfully">验证码发送成功</string>
+    <string name="text_editor_password">修改密码</string>
+    <string name="text_now_password">旧密码</string>
+    <string name="text_new_password">新密码</string>
+    <string name="reset_successfully">重置密码成功</string>
+    <string name="reset_failed">重置密码失败</string>
 
 </resources>
